--- a/base.html
+++ b/base.html
@@ -13,40 +13,42 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">OnTrack</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="{% url 'home' %}">Home</a>
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
-                    {% if user.is_authenticated %}
-                    <form method="POST" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <input type="submit" class="nav-link" value="Log OUt">
-                    </form>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
-                            data-bs-display="static" aria-expanded="false">
-                            To do
-                        </button>
-                        {% for issue in to_do_list %}{% endfor %}
-                        <ul class="dropdown-menu dropdown-menu-lg-end">
-                            <li><button class="dropdown-item" type="button">To Do</button></li>
-                            <li><button class="dropdown-item" type="button">In Progress</button></li>
-                            <li><button class="dropdown-item" type="button">Done</button></li>
-                        </ul>
-                    </div>
+        <a class="navbar-brand" href="{% url 'home' %}">OnTrack</a>
 
-                    {% else %}
-                    <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                    {% endif %}
-                </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                <a class="nav-link" href="{% url 'list' %}">Posts</a>
+                <a class="nav-link" href="{% url 'about' %}">About</a>
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'new' %}">New Post</a>
+                {% else %}
+                <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                {% endif %}
             </div>
+            {% if user.is_authenticated %}
+            <li class="nav-item deopdown d-flex">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    {{user}}
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="{% url 'published' %}">Published</a></li>
+                    <li><a class="dropdown-item" href="{% url 'drafts' %}">Drafts</a></li>
+                    <li><a class="dropdown-item" href="{% url 'archived' %}">Archived</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                        <form method="POST" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <input type="submit" class="dropdown-item" value="Log Out">
+                        </form>
+                    </li>
+                </ul>
+            </li>
+            {% endif %}
         </div>
     </nav>
     <div class="container">
